--- a/dwbackup.ini
+++ b/dwbackup.ini
@@ -1,13 +1,42 @@
+; If you're using Amazon S3 for your backups, you'll need to set these
+; variables with your private keys.
 aws_access_key_id = <your access key>
 aws_secret_access_key = <your secret key>
-passphrase = <your gpg passphrase>
+
+; If you want your backups encrypted and signed via GPG, you'll need to
+; include your key identifier and passphrase here.
 gpg_key = <your gpg key id>
+passphrase = <your gpg passphrase>
+
+; This is the default backup destination. If a section does not include
+; its own local dest, this will be used, with the name of section
+; appended to the end. For example:
+;
+; dest = s3+http://mydomain.com/dwbackup/
+;
+; [set1]
+; source = /path/to/files
+;
+; [set2]
+; source = /path/to/other/files
+; dest = file:///backups/set2
+;
+; I.e., set1 will be backed up up to s3+http://mydomain.com/dwbackup/set1
+; and set2 will be backed up to file:///backups/set2
+;
+; If you use a default destination, you probably want to make sure it ends
+; with a slash, so that the URI still makes sense when the set name is added.
 dest = s3+http://mydomain.com/dwbackup/
 
+; Each set is defined by its own section.
 [www]
 source = /var/www
 
 [home]
 source = /home
-options = --exclude /home/fred/
+exclude = /home/fred/
 dest = file:///path/to/archive
+
+[mail]
+source = /var/spool/mail
+options = --no-encryption
