Changed PASSPHRASE to SIGN_PASSPHRASE to match duplicity update.

--- a/dwbackup.ini
+++ b/dwbackup.ini
@@ -6,7 +6,7 @@ aws_secret_access_key = <your secret key>
 ; If you want your backups encrypted and signed via GPG, you'll need to
 ; include your key identifier and passphrase here.
 gpg_key = <your gpg key id>
-passphrase = <your gpg passphrase>
+sign_passphrase = <your gpg passphrase>
 
 ; This is the default backup destination. If a section does not include
 ; its own local dest, this will be used, with the name of section
