Separated INI options for sign key and encryption key.

--- a/dwbackup.ini
+++ b/dwbackup.ini
@@ -3,9 +3,15 @@
 aws_access_key_id = <your access key>
 aws_secret_access_key = <your secret key>
 
-; If you want your backups encrypted and signed via GPG, you'll need to
-; include your key identifier and passphrase here.
-gpg_key = <your gpg key id>
+; If you want your backups encrypted via GPG, you'll need to include
+; your key identifier and passphrase here.
+encrypt_key = <your gpg key id>
+passphrase = <your gpg passphrase>
+
+; If you want your backups signed via GPG, you'll need to include
+; your key identifier and passphrase here. This will most likely
+; be the same as the encryption key.
+sign_key  = <your gpg key id>
 sign_passphrase = <your gpg passphrase>
 
 ; This is the default backup destination. If a section does not include
