Added global options and the ability to specify a list of sets on the command line.

--- a/dwbackup.ini
+++ b/dwbackup.ini
@@ -34,9 +34,17 @@ sign_passphrase = <your gpg passphrase>
 ; with a slash, so that the URI still makes sense when the set name is added.
 dest = s3+http://mydomain.com/dwbackup/
 
-; Each set is defined by its own section.
+; Options specified here apply to all sets.
+options = --verbosity info
+
+; Each set is defined by its own section. At the very least, each section
+; must have its own source. Options specified here will be used only for
+; this set. Note that the global options will also be used in this case,
+; and will come first. Thus, if you have --opt=local specified here and
+; --opt=global specified above, dwbackup will use --opt=global --opt=local.
 [www]
 source = /var/www
+options = --full-if-older-than 1M
 
 [home]
 source = /home
