Added cleanup option.

--- a/dwbackup.ini
+++ b/dwbackup.ini
@@ -37,6 +37,10 @@ dest = s3+http://mydomain.com/dwbackup/
 ; Options specified here apply to all sets.
 options = --verbosity info
 
+; If specified, run this clean command after each backup. If a clean command
+; is specified for the specific backup set, that will be run instead.
+clean = remove-all-but-n-full 4
+
 ; Each set is defined by its own section. At the very least, each section
 ; must have its own source. Options specified here will be used only for
 ; this set. Note that the global options will also be used in this case,
@@ -45,6 +49,7 @@ options = --verbosity info
 [www]
 source = /var/www
 options = --full-if-older-than 1M
+clean = remove-all-inc-of-but-n-full 2
 
 [home]
 source = /home
