Changed default protocol in docs from s3+http to boto3+s3.

--- a/dwbackup.ini
+++ b/dwbackup.ini
@@ -18,7 +18,7 @@ sign_passphrase = <your gpg passphrase>
 ; its own local dest, this will be used, with the name of section
 ; appended to the end. For example:
 ;
-; dest = s3+http://mydomain.com/dwbackup/
+; dest = boto3+s3://mydomain.com/dwbackup/
 ;
 ; [set1]
 ; source = /path/to/files
@@ -27,12 +27,12 @@ sign_passphrase = <your gpg passphrase>
 ; source = /path/to/other/files
 ; dest = file:///backups/set2
 ;
-; I.e., set1 will be backed up up to s3+http://mydomain.com/dwbackup/set1
+; I.e., set1 will be backed up up to boto3+s3://mydomain.com/dwbackup/set1
 ; and set2 will be backed up to file:///backups/set2
 ;
 ; If you use a default destination, you probably want to make sure it ends
 ; with a slash, so that the URI still makes sense when the set name is added.
-dest = s3+http://mydomain.com/dwbackup/
+dest = boto3+s3://mydomain.com/dwbackup/
 
 ; Options specified here apply to all sets.
 options = --verbosity info
